--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,33 @@
-# Use Ctrl-a instead of the default Ctrl-b
+# command prefix (like screen)
 set -g prefix C-a
 
+# basic settings
+set-window-option -g mode-keys vi # vi key
+set-window-option -g utf8 on # utf8 support
+
+# window title
+set-option -g set-titles on
+set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
+set-window-option -g automatic-rename on # auto name
+
+# No visual activity
+set -g visual-bell off
+
 # Set to use 256 colors
-set -g default-terminal 'screen-256color'
+# set -g default-terminal 'screen-255color'
 
-# Set status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-left '#[fg=green]#H'
-set -g status-right '#[fg=yellow]#(date)'
+# THEME
+set-option -g status-utf8 on
+set-option -g status-justify right
+set-option -g status-bg black
+set-option -g status-fg cyan
+set-option -g status-interval 5
+set-option -g status-left-length 50
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
+set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+set-option -g visual-activity on
 
-# Highlight active window
-set-window-option -g window-status-current-bg red
-
-# Use vi mode key bindings
-set-window-option -g mode-keys vi
+set-window-option -g monitor-activity on
+set-window-option -g window-status-current-fg white
+set-window-option -g clock-mode-colour cyan
+set-window-option -g clock-mode-style 24
