--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,20 +14,40 @@ set-window-option -g automatic-rename on # auto name
 set -g visual-bell off
 
 # Set to use 256 colors
-# set -g default-terminal 'screen-255color'
+set -g default-terminal 'screen-256color'
 
-# THEME
-set-option -g status-utf8 on
-set-option -g status-justify right
-set-option -g status-bg black
-set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 50
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
-set-option -g visual-activity on
+### Status
+set-option -g status-left ''
+set-option -g status-right ''
 
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-fg white
-set-window-option -g clock-mode-colour cyan
-set-window-option -g clock-mode-style 24
+#### COLOUR
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
