--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,53 +1,25 @@
-# command prefix (like screen)
 set -g prefix C-a
-
-# basic settings
-set-window-option -g mode-keys vi # vi key
 set-window-option -g utf8 on # utf8 support
-
-# window title
-set-option -g set-titles on
-set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
-set-window-option -g automatic-rename on # auto name
-
-# No visual activity
 set -g visual-bell off
-
-# Set to use 256 colors
 set -g default-terminal 'screen-256color'
 
-### Status
-set-option -g status-left ''
-set-option -g status-right ''
-
-#### COLOUR
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour7,bg=colour11"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour14"
+set -g status-utf8 "on"
+set -g status-style "bg=colour0,none"
+set -g message-style "fg=colour7,bg=colour11"
+set -g pane-border-style "fg=colour11"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-style "fg=colour14,bg=colour0,none"
+setw -g window-status-separator ""
+setw -g window-status-style "fg=colour10,bg=colour0,none"
+set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] %Y-%m-%d  %H:%M #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour14] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #I #[fg=colour7,bg=colour11] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
